fix holidays and add cutoff jhj

--- a/payslip/payslip.css
+++ b/payslip/payslip.css
@@ -6,8 +6,7 @@ td {
     /*padding: 3px 3px 3px 3px;*/
     border-color: black;
     background-color: #ffff;
-    font-size: 12px;
-    brode
+    font-size: 16px;
 }
 
 table {
